assets/css/style.css
/* imported front from google fonts */
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');

/* Asterisk wildcard selector to override deafault styles added by browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* general styles to be added towards top of code */

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* generic project style */
    color: #3a3a3a;
    font-family: 'Lato', sans-serif;
}

h1, h2, h3 {
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #252525;
}

/* Header */
header {
    background-color: #ffffff;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px #3a3a3a;
    display: flex;
    justify-content: space-between;
    align-items: baseline;


}

header a {
    text-decoration: none;
    color: inherit;
}


/* main content */
main {
    /* main element to take up unused space to push footer down */
    flex: 1 0 auto;
    margin-top: 47px;
}

#hero {
    height: 600px;
    width: 100%;
    background: url("../images/hero-image.webp") no-repeat center center/cover;
    position: relative;

}


#cover-text {
    /* RGBA value sets the opacity so its semi-transparent */
    background-color: rgba(241, 109, 107, .7);
    font-size: 130%;
    position: absolute;
    bottom: 30px;
    width: 80%;
    min-height: 200px;
    padding-top: 40px;
    padding-left: 10px;
}

#cover-text > h2, #cover-text> h3 {
    color: #ffffff;
}

#menu {
    font-size: 110%;
    letter-spacing: 4px;
    list-style-type: none;
}

#menu>li {
    margin-bottom: 1em;
}

.active {
    border-bottom: 1px solid #3a3a3a;
}

/* navbar styles with dropdown toggle */
nav {
    position: absolute;
    background-color: #ffffff;
    padding: 0 1rem;
    left: 0;
    width: 100%;
    box-shadow: 0 2px 2px #3a3a3a;
    display: none;
    top: 100%;
}

/* nav toggle*/
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

#reasons {
    width: 90%;
    margin: 20px auto;
}

#reasons h2 {
    margin-bottom: 20px;
    text-align: center;
    font-size: 280%;
}

#benefits-physical>div,
#benefits-mental>div {
    line-height: 20px;
    margin-bottom: 20px;
}

#benefits p {
    padding: 0 20px;
}

hr {
    border-top: 1px solid #3a3a3a;
    margin: 5px 0;
}


#circle-cover-bg {
    background: url('../images/reasons-image.webp') no-repeat top center/ cover;
    height: 90vw;
    width: 90vw;
    margin-bottom: 20px;
    border-radius: 50%;
    max-width: 300px;
    max-height: 300px;
}

#benefits-image {
    display: flex;
    align-items: center;
    justify-content:  center;
}

/* footer */
#social-networks {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-networks i {
    font-size: 160%;
    padding: 5%;
    color: #3a3a3a;
}

/* Media query: Tablets and larger (More than 768px) */
@media screen and (min-width: 768px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }

    #menu {
        display: flex;
    }

    #menu>li {
        padding-left: 1rem;
    }

    .nav-toggle-label {
        display: none;
    }

    #logo {
        font-size: 280%;
        line-height: 75px;
        margin: 0 0.5rem;
    }

    main {
        margin-top: 79px;
    }

    /* Hero */
    #cover-text {
        width: 300px;
        right: 50px;
    }

    /* reasons section */
    #benefits-physical,
    #benefits-mental {
        display: flex;
        flex-direction: column;
        width: 100%;
    }
    #benefits-physical > div,
    #benefits-mental > div {
        width: 75%;
    }
    #Benefits-mental > div {
        text-align: end;
        align-self: flex-end;
    }

}

@media screen and (min-width: 992px) {
    #menu a:hover {
        border-bottom: 1px solid #3a3a3a;
    }

}

